# agent-playgroud

./: .gitignore  002_infinite_conversation.py  003_tool_result_pruning.py  004_mission.py  005_grep.py  006_memory.py  007_eval.py  CLAUDE.md  REASONIX.md  pyproject.toml  react.py
data/: README.md  large_log.txt  system_log.txt  weather_report.txt
