[project]
name = "agent-playgroud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix>=8.0.0",
    "arize-phoenix-evals>=0.9.0",
    "arize-phoenix-otel>=0.9.0",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
]
